# LemIn

./: CMakeLists.txt  Makefile  a.out  author  dimas  kek  kek.sh  lem-in  lemin  map_7  moove
dimas.dSYM/Contents/: Info.plist
includes/: .lemin.h.swp  lemin.h  lemin.h.gch
kurwar/: LICENSE  README.md  a.out  make.sh
kurwar/dgrady/: .gen.c.swp  a.out  gen.c  lc.h  op.h  test.cor  translator.c
kurwar/dgrady/libft/: libft.h.gch
kurwar/inc/: a.out  lc.h  op.h  test.c
kurwar/src/: a.out  main.c  make.sh  try_fsm.c
kurwar/src/states/: states_pack_1.c
libft/: Makefile  get_next_line.c  libft.h
libft/ft_printf/includes/: ft_printf.h
libft/ft_printf/srcs/: analyze.c  ft_float.c  (+3 more)
libft/includes/: libft.h
libft/srcs/: ft_isalpha.c  ft_putchar.c  ft_putnbr.c  ft_strchr.c  ft_strcpy.c  ft_strdup.c  ft_strjoin_char.c  ft_strncmp.c  ft_strncpy.c  ft_strnequ.c  ft_strrchr.c  ft_strsplit.c  ft_strstr.c  get_next_line.c
map/: .map_5.swp  map_1  map_2  map_3  map_4  map_big  map_big1  map_easy  map_hard  map_not_easy  map_not_easy_mod  map_same_vertex  map_same_vertex_2  map_segfault
sources/: .ants_mover.c.swp  .counter.c.swp  algo_dijkstra.c  algo_suurbale.c  ants_mover.c  balancer.c  counter.c  edge_vertex.c  free_functions.c  main.c  parser.c  path_functions_1.c  path_functions_2.c  stuff.c  stuff2.c  stuff3.c  suurbale_functions.c  vector.c
src/: .balancer.c.swp  .counter.c.swp  .main.c.swp  algo_dijkstra.c  algo_suurbale.c  ants_mover.c  balancer.c  counter.c  edge.c  edge_vertex.c  main.c  map  moover.c  parser.c  path_functions_2.c  stuff.c  vector.c
(+3 files in other folders)
